--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "serve": "node server.js",
+    "build:prod": "ng build --configuration production && npm run serve"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +20,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -29,8 +33,8 @@
     "@types/node": "^20.11.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
+    "serve": "^14.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3"
   }
 }
-
