Fix Railway EBUSY error: update nixpacks config, add dockerignore, fix build process

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = ["rm -rf node_modules/.cache", "npm ci --no-cache"]
 
 [phases.build]
 cmds = ["npm run build"]
