--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve": "node server.js",
-    "build:prod": "ng build --configuration production && npm run serve"
+    "build:prod": "ng build --configuration production && npm run serve",
+    "postinstall": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
