Fix NullInjectorError: add provideHttpClient to main.ts

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm ci --no-cache"]
+cmds = ["rm -rf node_modules/.cache", "npm ci --no-cache"]
 
 [phases.build]
-cmds = ["npm run build", "npx prisma generate"]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm run start"
