--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,14 @@
   "description": "Backend for Ruslana Moskalenko medical website",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "echo 'No build needed for postgres server'",
+    "start": "node src/postgres-server.js",
+    "dev": "node src/postgres-server.js",
     "migrate": "npx prisma migrate dev",
     "migrate:deploy": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
-    "postinstall": "npx prisma generate"
+    "postinstall": "echo 'PostgreSQL server ready'"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "express-rate-limit": "^7.1.5",
     "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
