Add database initialization endpoint and setup script

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
     "init-db": "node scripts/init-db.js",
+    "setup-db": "node scripts/init-db.js",
     "postinstall": "echo 'PostgreSQL server ready'"
   },
   "dependencies": {
