--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "echo 'No build needed for postgres server'",
-    "start": "node src/postgres-server.js",
-    "dev": "node src/postgres-server.js",
+    "start": "node src/sqlite-server.js",
+    "dev": "node src/sqlite-server.js",
     "migrate": "npx prisma migrate dev",
     "migrate:deploy": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
@@ -28,7 +28,8 @@
     "express-rate-limit": "^7.1.5",
     "compression": "^1.7.4",
     "morgan": "^1.10.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
